[gd_scene load_steps=7 format=2]

[ext_resource path="res://interaction/platform/platform.gd" type="Script" id=1]
[ext_resource path="res://props/planks/plank.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/forest_torch.png" type="Texture" id=3]
[ext_resource path="res://art/smoke.png" type="Texture" id=4]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 300, 80 )

[node name="carryplat" type="Area2D"]
script = ExtResource( 1 )

[node name="platform" parent="." instance=ExtResource( 2 )]

[node name="Sprite" type="Sprite" parent="platform"]
position = Vector2( 216.474, -72.5428 )
texture = ExtResource( 3 )

[node name="fire" type="Particles2D" parent="platform"]
modulate = Color( 1, 1, 1, 0.363636 )
material = SubResource( 1 )
position = Vector2( 215.382, -130.846 )
rotation = 3.1288
amount = 16
lifetime = 2.0
local_coords = false
texture = ExtResource( 4 )

[node name="trigger" type="Position2D" parent="platform"]
position = Vector2( 216.792, -125.981 )

[node name="screenprox" type="VisibilityNotifier2D" parent="platform"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 2 )
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_body_enter"]
[connection signal="screen_entered" from="platform/screenprox" to="." method="_on_enter_screen"]
[connection signal="screen_exited" from="platform/screenprox" to="." method="_on_exit_screen"]
